# KCIinJapaneseFirms

./: .gitignore  README.md  README_ja.md  bash.exe.stackdump  pyproject.toml  requirements.txt  setup.cfg
.VSCodeCounter/2024-11-07_14-26-31/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
config/: adj.yaml  complexity.yaml  reg_num_filter.yaml  reg_num_filter_agg.yaml  weight.yaml
notebooks/00_template/: 0_LoadLibraries.py  1_sample.py
notebooks/01_external_preparation/: grp.py  schmoch.py
notebooks/01_merging_raw/: 0_LoadLibrary.py  0_MeltBulk.py  1_CleanJPWRP.py  1_MeltBulk.py  3_CleanJPRP.ipynb  5_MergeBulkStack.ipynb
notebooks/02_external_preparation/: ipc.py
notebooks/02_merging_raw/: 0_LoadLibraries.py  1_MeltBulk.py  2_CleanJPWRP.py  3_CleanJPWIP.py  4_CleanJPRP.py  5_CleanJPIP.py  6_MergeBulkStack.py
notebooks/03_cleansing_filtering/: 0_LoadLibraries.py  1_FixSpelling.ipynb  1_FixSpelling.py  2_FIlteringBeforeAgg.py  2_FilteringBeforeAgg.ipynb  2_FlagCorporations.py  3_AddClassification.py  4_FlagAddress.py
notebooks/04_observation/: 0_LoadLibraries.py  1_PatentCounts.py
notebooks/05_calculation/: 0_LoadLibraries.py  0_LoadLibrary.py  1_Aggregate.ipynb  1_Aggregate.py  1_AggregateWeight.py  1_CreateRegNumFilter.py  1_MergeCorporationRegion.py  1_Weight.py  2_AggregateWeight.py  2_Complexity.ipynb  2_Complexity.py  2_CreateRegNumFilter.py  3_AdjacencyMatrix.py  3_Complexity.py  3_Proximity.py  (+3 more)
src/: initial_condition.py
tests/: 99_2Test.ipynb  99_Test.ipynb  99_TestR.R  DrawTest.ipynb
(+149 files in other folders)
