# プロジェクト名とバージョン
[project]
name = "KCIinJapaneseFirms"
version = "0.1.0"

# パッケージ情報
[tool.poetry]
description = "A data analysis project using Python"
authors = ["Rintaro KARASHIMA"]

# 依存関係
[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
numpy = "^1.21.0"

# 開発用依存関係
[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
