[metadata]
name = your_package_name
version = 0.1.0
author = Rintaro KARASHIMA
author_email = rintaro.karashima@gmail.com
description = A short description of the project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com/your-package-homepage
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    BeautifulSoup4
    datetime
    ecomplexity
    glob
    json
    networkx
    numpy
    matplotlib
    pandas
    pytz
    request
    tarfile
    time
    urllib
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*
